--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -13,7 +13,7 @@
       </p>
       <p>
         <label for="image">Image</label>
-        <input type="file" id="image" name="image" accept="image/png,image/jpg">
+        <input type="file" id="image" name="image" accept="image/*">
       </p>
 
       <p>
